--- a/indexstyle.css
+++ b/indexstyle.css
@@ -38,19 +38,22 @@ html {
 .footer { grid-area: footer; }
 
 /* Navigation bar */
-ul {
+nav {
+  text-align: center;
+}
+
+nav ul {
   list-style-type: none;
   grid-area: nav;
   padding: 0;
   overflow: hidden;
   background-color: #15749E;
-  position: fixed;
-  top: -20px;
-  left: 25%;
-  width: 8fr;
+  display: inline-block;
+  position: relative;
+  top: -25px;
 }
 
-li {
+nav li {
   float: left;
 }
 
@@ -83,6 +86,23 @@ li a:hover {
   background-color: #4CAF50;
 }
 
+/* Progress Bar */
+
+.pbcontainer {
+  background-color: lightgrey; 
+  height: 20px;
+  width: 40%;
+  margin: -45px auto;
+}
+
+.pfinished { 
+  background-color: rgb(126, 201, 113); 
+  color: white; 
+  padding: 2px;
+  text-align: center;
+  font-size: 15px; 
+}
+
 /* Media Queries */
 
 @media screen and (max-width: 860px) {
@@ -90,9 +110,7 @@ li a:hover {
 	nav span.step {
 		display: none;
 	}
-  /*center the nav bar on mobile devices*/
-  nav ul{
-    position: fixed;
-    left: 18%;
+  .pbcontainer {
+
   }
 }
