--- a/step3style.css
+++ b/step3style.css
@@ -39,19 +39,22 @@ html {
 
 
 /* Navigation bar */
-ul {
+nav {
+  text-align: center;
+}
+
+nav ul {
   list-style-type: none;
   grid-area: nav;
   padding: 0;
   overflow: hidden;
   background-color: #15749E;
-  position: fixed;
-  top: -20px;
-  left: 25%;
-  width: 8fr;
+  display: inline-block;
+  position: relative;
+  top: -25px;
 }
 
-li {
+nav li {
   float: left;
 }
 
@@ -84,16 +87,50 @@ li a:hover {
   background-color: #4CAF50;
 }
 
+/* Progress Bar */
+
+.pbcontainer {
+  background-color: lightgrey; 
+  height: 20px;
+  width: 673px;
+  margin: -45px auto;
+}
+
+.pfinished { 
+  background-color: rgb(126, 201, 113); 
+  color: white; 
+  padding: 2px;
+  text-align: center;
+  font-size: 15px; 
+}
+
+/*Logo*/
+.logo {
+  grid-area: logo;
+}
+
+div.logo img{
+  float: right;
+  position: relative;
+  margin: -30px 0px 0px 0px;
+  width: 100px;
+  height: 25px;
+}
+
 /* Media Queries */
 
 @media screen and (max-width: 860px) {
   /*hides element labeled as step (see nav section)*/
-	nav span.step {
+	.nav span.step {
 		display: none;
 	}
-  /*center the nav bar on mobile devices*/
-  nav ul{
-    position: fixed;
-    left: 18%;
+  .pbcontainer {
+    width: 200px;
+  }
+  div.logo figure img{
+    position: relative;
+    width: 20%;
+    height: 20%;
+    margin: -3% -42px 0px 0px;
   }
 }
