--- a/indexstyle.css
+++ b/indexstyle.css
@@ -38,14 +38,14 @@ html {
 .footer { grid-area: footer; }
 
 /* Title */
-
-.title {
-  text-align: left;
-}
-
-div.title {
-  grid-area: title;
-  
+.title h2{
+  text-align: center;
+  float: left;
+  padding: 20.5px 24px;
+  background-color: #15749E;
+  color: white;
+  position: relative;
+  margin: -40px 0px 0px -10px;
 }
 
 /* Navigation bar */
@@ -102,7 +102,7 @@ li a:hover {
 .pbcontainer {
   background-color: lightgrey; 
   height: 20px;
-  width: 673px;
+  width: 672.5px;
   margin: -45px auto;
 }
 
@@ -115,11 +115,7 @@ li a:hover {
 }
 
 /*Logo*/
-.logo {
-  grid-area: logo;
-}
-
-div.logo img{
+.logo img{
   float: right;
   position: relative;
   margin: -30px 0px 0px 0px;
@@ -131,13 +127,19 @@ div.logo img{
 
 @media screen and (max-width: 860px) {
   /*hides element labeled as step (see nav section)*/
+  .title h2{
+    padding: 19.5px 5px;
+    position: relative;
+    margin: -40px 0px 0px -10px;
+    font-size: 60%;
+  }
 	.nav span.step {
 		display: none;
 	}
   .pbcontainer {
     width: 200px;
   }
-  div.logo figure img{
+  .logo figure img{
     position: relative;
     width: 20%;
     height: 20%;
