--- a/step2style.css
+++ b/step2style.css
@@ -36,12 +36,23 @@ html {
 .Nbuttons { grid-area: Nbuttons; }
 .footer { grid-area: footer; }
 
+/* Title */
+.title h2{
+  text-align: center;
+  float: left;
+  padding: 6.5px 38px;
+  background-color: #15749E;
+  color: white;
+  position: relative;
+  margin: -40px 0px 0px -10px;
+}
+
 /* Navigation bar */
-nav {
+.nav {
   text-align: center;
 }
 
-nav ul {
+.nav ul {
   list-style-type: none;
   grid-area: nav;
   padding: 0;
@@ -52,19 +63,19 @@ nav ul {
   top: -25px;
 }
 
-nav li {
+.nav li {
   float: left;
 }
 
-nav ul li.previous {
+.nav ul li.previous {
   background-color: #7EC971;
 }
 
-nav ul li.active {
+.nav ul li.active {
   background-color: #009CCC;
 }
 
-nav ul li.future {
+.nav ul li.future {
   background-color: #15749E;
 }
 
@@ -90,7 +101,7 @@ li a:hover {
 .pbcontainer {
   background-color: lightgrey; 
   height: 20px;
-  width: 673px;
+  width: 672.5px;
   margin: -45px auto;
 }
 
@@ -103,11 +114,7 @@ li a:hover {
 }
 
 /*Logo*/
-.logo {
-  grid-area: logo;
-}
-
-div.logo img{
+.logo img{
   float: right;
   position: relative;
   margin: -30px 0px 0px 0px;
@@ -119,13 +126,19 @@ div.logo img{
 
 @media screen and (max-width: 860px) {
   /*hides element labeled as step (see nav section)*/
+  .title h2{
+    padding: 19.5px 5px;
+    position: relative;
+    margin: -40px 0px 0px -10px;
+    font-size: 60%;
+  }
 	.nav span.step {
 		display: none;
 	}
   .pbcontainer {
     width: 200px;
   }
-  div.logo figure img{
+  .logo figure img{
     position: relative;
     width: 20%;
     height: 20%;
