--- a/step4style.css
+++ b/step4style.css
@@ -44,12 +44,23 @@ html {
 .header4 { grid-area: header4; }
 .results4 { grid-area: results4; }
 
+/* Title */
+.title h2{
+  text-align: center;
+  float: left;
+  padding: 20.5px 24px;
+  background-color: #15749E;
+  color: white;
+  position: relative;
+  margin: -40px 0px 0px -10px;
+}
+
 /* Navigation bar */
-nav {
+.nav {
   text-align: center;
 }
 
-nav ul {
+.nav ul {
   list-style-type: none;
   grid-area: nav;
   padding: 0;
@@ -60,19 +71,19 @@ nav ul {
   top: -25px;
 }
 
-nav li {
+.nav li {
   float: left;
 }
 
-nav ul li.previous {
+.nav ul li.previous {
   background-color: #7EC971;
 }
 
-nav ul li.active {
+.nav ul li.active {
   background-color: #009CCC;
 }
 
-nav ul li.future {
+.nav ul li.future {
   background-color: #15749E;
 }
 
@@ -98,7 +109,7 @@ li a:hover {
 .pbcontainer {
   background-color: lightgrey; 
   height: 20px;
-  width: 673px;
+  width: 672.5px;
   margin: -45px auto;
 }
 
@@ -111,11 +122,7 @@ li a:hover {
 }
 
 /*Logo*/
-.logo {
-  grid-area: logo;
-}
-
-div.logo img{
+.logo img{
   float: right;
   position: relative;
   margin: -30px 0px 0px 0px;
@@ -127,13 +134,19 @@ div.logo img{
 
 @media screen and (max-width: 860px) {
   /*hides element labeled as step (see nav section)*/
+  .title h2{
+  padding: 19.5px 5px;
+  position: relative;
+  margin: -40px 0px 0px -10px;
+  font-size: 60%;
+  }
 	.nav span.step {
 		display: none;
 	}
   .pbcontainer {
     width: 200px;
   }
-  div.logo figure img{
+  .logo figure img{
     position: relative;
     width: 20%;
     height: 20%;
