--- a/step2style.css
+++ b/step2style.css
@@ -40,7 +40,7 @@ html {
 .title h2{
   text-align: center;
   float: left;
-  padding: 6.5px 38px;
+  padding: 6.5px 49px;
   background-color: #15749E;
   color: white;
   position: relative;
@@ -127,10 +127,10 @@ li a:hover {
 @media screen and (max-width: 860px) {
   /*hides element labeled as step (see nav section)*/
   .title h2{
-    padding: 19.5px 5px;
+    padding: 19.5px 10px;
     position: relative;
     margin: -40px 0px 0px -10px;
-    font-size: 60%;
+    font-size: 80%;
   }
 	.nav span.step {
 		display: none;
@@ -138,10 +138,9 @@ li a:hover {
   .pbcontainer {
     width: 200px;
   }
-  .logo figure img{
+  .logo img{
     position: relative;
-    width: 20%;
-    height: 20%;
-    margin: -3% -42px 0px 0px;
+    width: 25%;
+    margin: -5% -22% 0% 0%;
   }
 }
