--- a/step3style.css
+++ b/step3style.css
@@ -42,7 +42,7 @@ html {
 .title h2{
   text-align: center;
   float: left;
-  padding: 20.5px 24px;
+  padding: 6.5px 44.5px;
   background-color: #15749E;
   color: white;
   position: relative;
@@ -129,10 +129,10 @@ li a:hover {
 @media screen and (max-width: 860px) {
   /*hides element labeled as step (see nav section)*/
   .title h2{
-  padding: 19.5px 5px;
-  position: relative;
-  margin: -40px 0px 0px -10px;
-  font-size: 60%;
+    padding: 19.5px 7px;
+    position: relative;
+    margin: -40px 0px 0px -10px;
+    font-size: 80%;
   }
 	.nav span.step {
 		display: none;
@@ -140,10 +140,9 @@ li a:hover {
   .pbcontainer {
     width: 200px;
   }
-  .logo figure img{
+  .logo img{
     position: relative;
-    width: 20%;
-    height: 20%;
-    margin: -3% -42px 0px 0px;
+    width: 25%;
+    margin: -5% -22% 0% 0%;
   }
 }
