--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html {
   background-color: #15749E;
   color: white;
   position: relative;
-  margin: -40px 0px 0px -10px;
+  margin: -12px 0px 0px -10px;
 }
 
 /* Title Page 2 */
@@ -28,7 +28,7 @@ html {
   background-color: #15749E;
   color: white;
   position: relative;
-  margin: -40px 0px 0px -10px;
+  margin: -12px 0px 0px -10px;
 }
 
 /* Title Page 3 */
@@ -77,6 +77,7 @@ html {
   background-color: #15749E;
   display: inline-block;
   position: relative;
+  left: -84px;
   top: -25px;
 }
 
@@ -149,6 +150,30 @@ li a:hover {
   padding: 0;
 }
 
+/*Header Page 1*/
+.header h1{
+  display: inline-block;
+  text-align: center;
+  background-color: #009CCC;
+  color: white;
+  width: 102.5%;
+  margin: 0px 0px 0px -9px;
+  font-size: 1.5rem;
+  padding: 15px 0px;
+}
+
+/*Header Page 2*/
+.header1 h1{
+  display: inline-block;
+  text-align: center;
+  background-color: #009CCC;
+  color: white;
+  width: 101.75%;
+  margin: 0px 0px 0px -8px; 
+}
+
+
+
 
 
 /* Media Queries */
@@ -158,7 +183,7 @@ li a:hover {
   .title h2{
     padding: 29.5px 5px;
     position: relative;
-    margin: -40px 0px 0px -10px;
+    margin: -12px 0px 0px -10px;
     font-size: 60%;
   }
   .title2 h2{
@@ -188,6 +213,9 @@ li a:hover {
 	.nav span.step {
 		display: none;
 	}
+  .nav ul{
+    margin-right: -115px;
+  }
   .pbcontainer {
     width: 200px;
   }
@@ -198,7 +226,10 @@ li a:hover {
     margin: -3% -42px 0px 0px;
   }
   .HomeImage img{
-    width: 110%;
+    width: 106.5%;
     margin: 0px 0px 0px -10px;
+  }
+  .header h1{
+    width: 106%;
   }
 }
