--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ html {
   background-color: #15749E;
   color: white;
   position: relative;
-  margin: -40px 0px 0px -10px;
+  margin: -12px 0px 0px -10px;
 }
 
 /* Title Page 4 */
@@ -163,15 +163,40 @@ li a:hover {
 }
 
 /*Header Page 2*/
-.header1 h1{
+.header2 h1{
   display: inline-block;
   text-align: center;
   background-color: #009CCC;
   color: white;
   width: 101.75%;
   margin: 0px 0px 0px -8px; 
+  font-size: 1.5rem;
+  padding: 15px 0px;
 }
 
+/*Header Page 3*/
+.header3 h1{
+  display: inline-block;
+  text-align: center;
+  background-color: #009CCC;
+  color: white;
+  width: 101.75%;
+  margin: 0px 0px 0px -8px; 
+  font-size: 1.5rem;
+  padding: 15px 0px;
+}
+
+/*Header Page 4*/
+.header4 h1{
+  display: inline-block;
+  text-align: center;
+  background-color: #009CCC;
+  color: white;
+  width: 101.75%;
+  margin: 0px 0px 0px -8px; 
+  font-size: 1.5rem;
+  padding: 15px 0px;
+}
 
 
 
@@ -189,13 +214,13 @@ li a:hover {
   .title2 h2{
     padding: 19.5px 9.5px;
     position: relative;
-    margin: -40px 0px 0px -10px;
+    margin: -12px 0px 0px -10px;
     font-size: 80%;
   }
   .title3 h2{
     padding: 19.5px 7px;
     position: relative;
-    margin: -40px 0px 0px -10px;
+    margin: -12px 0px 0px -10px;
     font-size: 80%;
   }
   .title4 h2{
@@ -214,7 +239,7 @@ li a:hover {
 		display: none;
 	}
   .nav ul{
-    margin-right: -115px;
+    margin-right: -116.5px;
   }
   .pbcontainer {
     width: 200px;
@@ -226,10 +251,21 @@ li a:hover {
     margin: -3% -42px 0px 0px;
   }
   .HomeImage img{
-    width: 106.5%;
+    width: 107%;
     margin: 0px 0px 0px -10px;
   }
   .header h1{
+    width: 106.5%;
+    font-size: 1.25rem;
+  }
+  .header2 h1{
+    width: 106.5%;
+    padding: 10px;
+    font-size: 1.25rem;
+  }
+  .header3 h1{
     width: 106%;
+    padding: 10px;
+    font-size: 1.25rem;
   }
 }
