--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ html {
   background-color: #15749E;
   color: white;
   position: relative;
-  margin: -40px 0px 0px -10px;
+  margin: -12px 0px 0px -10px;
 }
 
 /* Title Page 5 */
@@ -61,7 +61,7 @@ html {
   background-color: #15749E;
   color: white;
   position: relative;
-  margin: -40px 0px 0px -10px;
+  margin: -12px 0px 0px -10px;
 }
 
 
@@ -146,7 +146,7 @@ li a:hover {
   float: left;
   position: relative;
   width: 103%;
-  margin: 0px 0px 0px -20px;
+  margin: 0px 0px 0px -14.5px;
   padding: 0;
 }
 
@@ -157,7 +157,7 @@ li a:hover {
   background-color: #009CCC;
   color: white;
   width: 102.5%;
-  margin: 0px 0px 0px -9px;
+  margin: 0px 0px 0px -8px;
   font-size: 1.5rem;
   padding: 15px 0px;
 }
@@ -198,6 +198,18 @@ li a:hover {
   padding: 15px 0px;
 }
 
+/*Header Page 5*/
+.header5 h1{
+  display: inline-block;
+  text-align: center;
+  background-color: #009CCC;
+  color: white;
+  width: 101.75%;
+  margin: 0px 0px 0px -8px; 
+  font-size: 1.5rem;
+  padding: 15px 0px;
+}
+
 
 
 
@@ -226,13 +238,13 @@ li a:hover {
   .title4 h2{
     padding: 19.5px 7.5px;
     position: relative;
-    margin: -40px 0px 0px -10px;
+    margin: -12px 0px 0px -10px;
     font-size: 80%;
   }
   .title5 h2{
     padding: 16.5px 13px;
     position: relative;
-    margin: -40px 0px 0px -10px;
+    margin: -12px 0px 0px -10px;
     font-size: 100%;
   }
 	.nav span.step {
@@ -260,12 +272,22 @@ li a:hover {
   }
   .header2 h1{
     width: 106.5%;
-    padding: 10px;
+    padding: 10px 20px;
     font-size: 1.25rem;
   }
   .header3 h1{
     width: 106%;
-    padding: 10px;
+    padding: 10px 20px;
+    font-size: 1.25rem;
+  }
+  .header4 h1{
+    width: 106%;
+    padding: 10px 20px;
+    font-size: 1.25rem;
+  }
+  .header5 h1{
+    width: 106%;
+    padding: 10px 20px;
     font-size: 1.25rem;
   }
 }
