--- a/style.css
+++ b/style.css
@@ -8,66 +8,25 @@ html {
   box-sizing: border-box;
 }
 
-
-/* Title Page 1 */
-.title h2{
-  text-align: center;
-  float: left;
-  padding: 20.5px 24px;
-  background-color: #15749E;
-  color: white;
-  position: relative;
-  margin: -12px 0px 0px -10px;
+h1, h2, h3 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
 }
 
-/* Title Page 2 */
-.title2 h2{
-  text-align: center;
-  float: left;
-  padding: 6.5px 48.5px;
-  background-color: #15749E;
-  color: white;
-  position: relative;
-  margin: -12px 0px 0px -10px;
-}
+/* All Pages 
 
-/* Title Page 3 */
-.title3 h2{
-  text-align: center;
-  float: left;
-  padding: 6.5px 44.5px;
-  background-color: #15749E;
-  color: white;
-  position: relative;
-  margin: -12px 0px 0px -10px;
-}
+-------------------------------------------------
 
-/* Title Page 4 */
-.title4 h2{
-  text-align: center;
-  float: left;
-  padding: 6.5px 44.5px;
-  background-color: #15749E;
-  color: white;
-  position: relative;
-  margin: -12px 0px 0px -10px;
-}
-
-/* Title Page 5 */
-.title5 h2{
-  text-align: center;
-  float: left;
-  padding: 6.5px 62px;
-  background-color: #15749E;
-  color: white;
-  position: relative;
-  margin: -12px 0px 0px -10px;
-}
-
+*/
 
 /* Navigation bar */
 .nav {
   text-align: center;
+}
+
+.nav span.step-num {
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
 }
 
 .nav ul {
@@ -77,8 +36,10 @@ html {
   background-color: #15749E;
   display: inline-block;
   position: relative;
-  left: -84px;
+  left: -84.5px;
   top: -25px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: normal; 
 }
 
 .nav li {
@@ -101,13 +62,16 @@ li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 14px;
+  padding: 14px 8px;
   text-decoration: none;
 }
 
 li a:hover {
   background-color: white;
   color: #15749E;
+  font-size: 1.1rem;
+  padding: 13px 14px;
+  transition: ease-in-out 80ms;
 }
 
 .active {
@@ -140,9 +104,25 @@ li a:hover {
   height: 25px;
 }
 
+/* Page 1 - Introduction
+
+-------------------------------------------------
+
+*/
+
+/* Title Page 1*/
+.title h2{
+  text-align: center;
+  float: left;
+  padding: 20.5px 20px;
+  background-color: #15749E;
+  color: white;
+  position: relative;
+  margin: -12px 0px 0px -10px;
+}
+
 /*Landing Page Image*/
 .HomeImage img{
-  display: inline-block;
   float: left;
   position: relative;
   width: 103%;
@@ -162,6 +142,53 @@ li a:hover {
   padding: 15px 0px;
 }
 
+/* unordered list styling for Homepage*/
+ul {
+    list-style-type: none;
+}
+/* referenced: https://stackoverflow.com/questions/4861224/how-to-use-css-to-surround-a-number-with-a-circle*/
+.numberCircle {
+  display: block;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  margin: 1% 15px 0px 18%;
+
+  background: #15749E;
+  color: white;
+  text-align: center;
+
+  font: 32px Arial, sans-serif;
+}
+
+h3 ul li{
+  display: block;
+  padding: 25px 25px;
+  position: relative;
+  margin: -54px 15% 0px 20%;
+  /* referenced: https://www.geeksforgeeks.org/how-to-insert-spaces-tabs-in-text-using-html-css/*/
+  line-height: 1.5;
+  color: #15749E;
+}
+
+
+/* Page 2 - Contact Details
+
+-------------------------------------------------
+
+*/
+
+/* Title Page 2 */
+.title2 h2{
+  text-align: center;
+  float: left;
+  padding: 6px 45px;
+  background-color: #15749E;
+  color: white;
+  position: relative;
+  margin: -12px 0px 0px -10px;
+}
+
 /*Header Page 2*/
 .header2 h1{
   display: inline-block;
@@ -174,6 +201,22 @@ li a:hover {
   padding: 15px 0px;
 }
 
+/* Page 3 - Discover Roles
+
+-------------------------------------------------
+
+*/
+
+/* Title Page 3 */
+.title3 h2{
+  text-align: center;
+  float: left;
+  padding: 6px 41px;
+  background-color: #15749E;
+  color: white;
+  position: relative;
+  margin: -12px 0px 0px -10px;
+}
 /*Header Page 3*/
 .header3 h1{
   display: inline-block;
@@ -186,6 +229,22 @@ li a:hover {
   padding: 15px 0px;
 }
 
+/* Page 4 - Training Signup
+
+-------------------------------------------------
+
+*/
+
+/* Title Page 4 */
+.title4 h2{
+  text-align: center;
+  float: left;
+  padding: 6px 44px;
+  background-color: #15749E;
+  color: white;
+  position: relative;
+  margin: -12px 0px 0px -10px;
+}
 /*Header Page 4*/
 .header4 h1{
   display: inline-block;
@@ -198,6 +257,22 @@ li a:hover {
   padding: 15px 0px;
 }
 
+/* Page 5 - Next Steps
+
+-------------------------------------------------
+
+*/
+
+/* Title Page 5 */
+.title5 h2{
+  text-align: center;
+  float: left;
+  padding: 6px 58px;
+  background-color: #15749E;
+  color: white;
+  position: relative;
+  margin: -12px 0px 0px -10px;
+}
 /*Header Page 5*/
 .header5 h1{
   display: inline-block;
@@ -210,48 +285,18 @@ li a:hover {
   padding: 15px 0px;
 }
 
-
-
-
 /* Media Queries */
 
 @media screen and (max-width: 860px) {
-  /*hides element labeled as step (see nav section)*/
-  .title h2{
-    padding: 29.5px 5px;
-    position: relative;
-    margin: -12px 0px 0px -10px;
-    font-size: 60%;
-  }
-  .title2 h2{
-    padding: 19.5px 9.5px;
-    position: relative;
-    margin: -12px 0px 0px -10px;
-    font-size: 80%;
-  }
-  .title3 h2{
-    padding: 19.5px 7px;
-    position: relative;
-    margin: -12px 0px 0px -10px;
-    font-size: 80%;
-  }
-  .title4 h2{
-    padding: 19.5px 7.5px;
-    position: relative;
-    margin: -12px 0px 0px -10px;
-    font-size: 80%;
-  }
-  .title5 h2{
-    padding: 16.5px 13px;
-    position: relative;
-    margin: -12px 0px 0px -10px;
-    font-size: 100%;
-  }
+  /* All Pages */
 	.nav span.step {
+    /*hides element labeled as step (see nav section)*/
 		display: none;
 	}
   .nav ul{
     margin-right: -116.5px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold; 
   }
   .pbcontainer {
     width: 200px;
@@ -262,6 +307,13 @@ li a:hover {
     height: 20%;
     margin: -3% -42px 0px 0px;
   }
+  /* Page 1 */
+  .title h2{
+    padding: 29.5px 5px;
+    position: relative;
+    margin: -12px 0px 0px -10px;
+    font-size: 60%;
+  }
   .HomeImage img{
     width: 107%;
     margin: 0px 0px 0px -10px;
@@ -270,20 +322,58 @@ li a:hover {
     width: 106.5%;
     font-size: 1.25rem;
   }
+  .numberCircle {
+    margin: 10px 0px 0px -25px;
+    background: #15749E;
+    color: white;
+    text-align: center;
+  }
+  h3 ul li{
+    padding: 10px 20px;
+    margin: -40px 0px 0px 5px;
+  }
+  /* Page 2 */
+  .title2 h2{
+    padding: 19.5px 9.5px;
+    position: relative;
+    margin: -12px 0px 0px -10px;
+    font-size: 80%;
+  }
   .header2 h1{
     width: 106.5%;
     padding: 10px 20px;
     font-size: 1.25rem;
+  }
+  /* Page 3 */
+  .title3 h2{
+    padding: 19.5px 7px;
+    position: relative;
+    margin: -12px 0px 0px -10px;
+    font-size: 80%;
   }
   .header3 h1{
     width: 106%;
     padding: 10px 20px;
     font-size: 1.25rem;
   }
+  /* Page 4 */
+  .title4 h2{
+    padding: 19.5px 7.5px;
+    position: relative;
+    margin: -12px 0px 0px -10px;
+    font-size: 80%;
+  }
   .header4 h1{
     width: 106%;
     padding: 10px 20px;
     font-size: 1.25rem;
+  }
+  /* Page 5 */
+  .title5 h2{
+    padding: 16.5px 13px;
+    position: relative;
+    margin: -12px 0px 0px -10px;
+    font-size: 100%;
   }
   .header5 h1{
     width: 106%;
