--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h1, h2, h3, h4, p {
   background-color: #15749E;
   display: inline-block;
   position: relative;
-  left: -84.5px;
+  left: -85px;
   top: -25px;
   font-family: 'Raleway', sans-serif;
   font-weight: normal; 
@@ -83,7 +83,7 @@ li a:hover {
 .pbcontainer {
   background-color: lightgrey; 
   height: 20px;
-  width: 672.5px;
+  width: 667px;
   margin: -45px auto;
 }
 
@@ -243,7 +243,7 @@ li a:hover {
   background-color: #15749E;
   color: white;
   position: relative;
-  margin: -12px 0px 0px -10px;
+  margin: -12px 0px 0px -11px;
 }
 
 /*Landing Page Image*/
@@ -323,7 +323,7 @@ h3 ul li{
   background-color: #009CCC;
   color: white;
   width: 101.75%;
-  margin: 0px 0px 0px -8px; 
+  margin: 0px 0px 10px -8px; 
   font-size: 1.5rem;
   padding: 15px 0px;
 }
@@ -471,7 +471,7 @@ form p.p1{
 		display: none;
 	}
   .nav ul{
-    margin-right: -116.5px;
+    margin-right: -115px;
     font-family: 'Raleway', sans-serif;
     font-weight: bold; 
   }
@@ -486,7 +486,7 @@ form p.p1{
     transition: ease-in-out 80ms;
   }
   .pbcontainer {
-    width: 200px;
+    width: 195px;
   }
   .logo figure img{
     position: relative;
@@ -494,9 +494,22 @@ form p.p1{
     height: 20%;
     margin: -3% -42px 0px 0px;
   }
+  .buttonnavcontainer span.bnavtag{
+    display: none;
+  }
+  .buttonnavcontainer{
+    width: 300px;
+  }
+  .previouspage{
+    width: 50px;
+  }
+  .nextpage1{
+    width: 50px;
+    margin-left: 196px;
+  }
   /* Page 1 */
   .title h2{
-    padding: 29.5px 5px;
+    padding: 29.5px 4px;
     position: relative;
     margin: -12px 0px 0px -10px;
     font-size: 60%;
@@ -521,9 +534,9 @@ form p.p1{
   }
   /* Page 2 */
   .title2 h2{
-    padding: 19.5px 9.5px;
+    padding: 19.5px 8px;
     position: relative;
-    margin: -12px 0px 0px -10px;
+    margin: -12px 0px 0px -14px;
     font-size: 80%;
   }
   .header2 h1{
@@ -572,9 +585,9 @@ form p.p1{
   }
   /* Page 3 */
   .title3 h2{
-    padding: 19.5px 7px;
+    padding: 19.5px 6.5px;
     position: relative;
-    margin: -12px 0px 0px -10px;
+    margin: -12px 0px 0px -8px;
     font-size: 80%;
   }
   .header3 h1{
@@ -584,9 +597,9 @@ form p.p1{
   }
   /* Page 4 */
   .title4 h2{
-    padding: 19.5px 7.5px;
+    padding: 19.5px 7px;
     position: relative;
-    margin: -12px 0px 0px -10px;
+    margin: -12px 0px 0px -8px;
     font-size: 80%;
   }
   .header4 h1{
@@ -596,9 +609,9 @@ form p.p1{
   }
   /* Page 5 */
   .title5 h2{
-    padding: 16.5px 13px;
+    padding: 16px 13.5px;
     position: relative;
-    margin: -12px 0px 0px -10px;
+    margin: -12px 0px 0px -15px;
     font-size: 100%;
   }
   .header5 h1{
