Added dropdown menu, working on arranging available role list on page

--- a/style.css
+++ b/style.css
@@ -106,7 +106,6 @@ li a:hover {
 
 /* button styling referenced from: https://fdossena.com/?p=html5cool/buttons/i.frag */
 
-
 /* Next Page link button (Main page) */
 .nextpage {
   display: block; 
@@ -121,7 +120,7 @@ li a:hover {
   font-weight: bold;
   font-size: 1.2rem;
   color:white;
-  background-color: #7EC971;
+  background-color: rgb(103, 160, 93);
   text-align: center;
 }
 
@@ -153,7 +152,7 @@ li a:hover {
   font-weight: bold;
   font-size: 1.2rem;
   color:white;
-  background-color: rgb(45, 114, 47);
+  background-color: rgb(86, 133, 78);
   text-align: center;
 }
 
@@ -181,7 +180,7 @@ li a:hover {
   font-weight: bold;
   font-size: 1.2rem;
   color:white;
-  background-color: rgb(45, 114, 47);
+  background-color: rgb(86, 133, 78);
   text-align: center;
 }
 
@@ -299,7 +298,7 @@ h3 ul li{
 }
 
 
-/* Page 2 - Contact Details
+/* Page 2 - Discover Roles 
 
 -------------------------------------------------
 
@@ -309,11 +308,11 @@ h3 ul li{
 .title2 h2{
   text-align: center;
   float: left;
-  padding: 6px 45px;
+  padding: 6px 40px;
   background-color: #15749E;
   color: white;
   position: relative;
-  margin: -12px 0px 0px -10px;
+  margin: -12px 0px 0px -8px;
 }
 
 /*Header Page 2*/
@@ -324,6 +323,158 @@ h3 ul li{
   color: white;
   width: 101.75%;
   margin: 0px 0px 10px -8px; 
+  font-size: 1.5rem;
+  padding: 15px 0px;
+}
+
+/* Narrow Roles By: dropdown menu */
+/* Dropdown menu referenced from: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_js_dropdown_hover */
+
+.dropbtn {
+  display: block;
+  background-color: #7EC971;
+  color: white;
+  padding: 16px;
+  font-size: 20px;
+  border: none;
+  width: 200px;
+  margin: auto;
+  margin-top: .5em;
+  margin-bottom: 1em;
+  border-radius: 2em;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+}
+
+.dropdown {
+  position: relative;
+  display: block;
+  width: 200px;
+  margin: auto;
+  
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  width: 200px;
+  margin: auto;
+  background-color: #f1f1f1;
+  min-width: 150px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 2em;
+}
+
+.dropdown-content a {
+  padding: 14px 16px;
+  text-decoration: none;
+  display: block;
+  width: 200px;
+  margin: auto;
+  font-family: 'Raleway', sans-serif;
+  font-weight: normal;
+  color: #15749E;
+}
+
+.dropdown-content a:hover {
+  background-color: #009CCC;
+  color: white;
+  border-radius: 2em;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
+.dropcheck {
+  display: block;
+  margin: -1.25em 0px 0px -13em;
+}
+
+/* List of Roles */
+.rolelist {
+  display: block;
+  width: 50em;
+  margin: auto;
+}
+
+.rolelist h3 ul input {
+  display: inline-block;
+  padding: 12px 12px;
+  margin: 0 0em 0 -20em ;
+}
+
+.rolelist h3 ul li{
+  display: inline-block;
+  padding: 5px 5px;
+  position: relative;
+  text-align: left;
+  line-height: 1.5;
+  color: #15749E;
+  margin: 0 0 0 -15em;
+}
+
+.rolelist h3 ul li:last-of-type {
+  margin-bottom: 1em;
+}
+
+/* Page 3 - Training Signup
+
+-------------------------------------------------
+
+*/
+
+/* Title Page 3 */
+.title3 h2{
+  text-align: center;
+  float: left;
+  padding: 6px 43px;
+  background-color: #15749E;
+  color: white;
+  position: relative;
+  margin: -12px 0px 0px -8px;
+}
+/*Header Page 3*/
+.header3 h1{
+  display: inline-block;
+  text-align: center;
+  background-color: #009CCC;
+  color: white;
+  width: 101.75%;
+  margin: 0px 0px 0px -8px; 
+  font-size: 1.5rem;
+  padding: 15px 0px;
+}
+
+/* Page 4 - Contact Details
+
+-------------------------------------------------
+
+*/
+
+/* Title Page 4 */
+.title4 h2{
+  text-align: center;
+  float: left;
+  padding: 6px 45px;
+  background-color: #15749E;
+  color: white;
+  position: relative;
+  margin: -12px 0px 0px -10px;
+}
+/*Header Page 4*/
+.header4 h1{
+  display: inline-block;
+  text-align: center;
+  background-color: #009CCC;
+  color: white;
+  width: 101.75%;
+  margin: 0px 0px 0px -8px; 
   font-size: 1.5rem;
   padding: 15px 0px;
 }
@@ -378,61 +529,6 @@ form p.p1{
   color: #15749E;
 }
 
-/* Page 3 - Discover Roles
-
--------------------------------------------------
-
-*/
-
-/* Title Page 3 */
-.title3 h2{
-  text-align: center;
-  float: left;
-  padding: 6px 41px;
-  background-color: #15749E;
-  color: white;
-  position: relative;
-  margin: -12px 0px 0px -10px;
-}
-/*Header Page 3*/
-.header3 h1{
-  display: inline-block;
-  text-align: center;
-  background-color: #009CCC;
-  color: white;
-  width: 101.75%;
-  margin: 0px 0px 0px -8px; 
-  font-size: 1.5rem;
-  padding: 15px 0px;
-}
-
-/* Page 4 - Training Signup
-
--------------------------------------------------
-
-*/
-
-/* Title Page 4 */
-.title4 h2{
-  text-align: center;
-  float: left;
-  padding: 6px 44px;
-  background-color: #15749E;
-  color: white;
-  position: relative;
-  margin: -12px 0px 0px -10px;
-}
-/*Header Page 4*/
-.header4 h1{
-  display: inline-block;
-  text-align: center;
-  background-color: #009CCC;
-  color: white;
-  width: 101.75%;
-  margin: 0px 0px 0px -8px; 
-  font-size: 1.5rem;
-  padding: 15px 0px;
-}
 
 /* Page 5 - Next Steps
 
@@ -544,6 +640,67 @@ form p.p1{
     padding: 10px 20px;
     font-size: 1.25rem;
   }
+/* Narrow Roles By: dropdown menu */
+.dropbtn {
+  width: 150px;
+}
+.dropdown {
+  width: 150px;
+}
+.dropdown-content {
+  width: 150px;
+}
+.dropdown-content a {
+  width: 150px;
+}
+.dropcheck {
+  margin: -1em 0 0 3.75em;
+}
+/* List of Roles */
+.rolelist {
+  width: 250px;
+  margin: 0 0 0 -4em;
+}
+
+.rolelist h3 ul li input {
+  display: block;
+  padding: 0;
+  margin: 1.5em 0 0 -22em;
+}
+
+.rolelist h3 ul li{
+  display: block;
+  padding: .5em;
+  margin: -20px -22em 0 2em;
+}
+
+.rolelist h3 ul li:last-of-type {
+  margin-bottom: 1em;
+}
+  /* Page 3 */
+  .title3 h2{
+    padding: 19.5px 6.5px;
+    position: relative;
+    margin: -12px 0px 0px -8px;
+    font-size: 80%;
+  }
+  .header3 h1{
+    width: 106%;
+    padding: 10px 20px;
+    font-size: 1.25rem;
+  }
+  /* Page 4 */
+  .title4 h2{
+    padding: 19.5px 7px;
+    position: relative;
+    margin: -12px 0px 0px -8px;
+    font-size: 80%;
+  }
+  .header4 h1{
+    width: 106%;
+    padding: 10px 20px;
+    font-size: 1.25rem;
+  }
   /* Form Styling */
   input {
     display: block;
@@ -582,30 +739,6 @@ form p.p1{
     margin: auto;
     margin-top: 20px;
     color: #15749E;
-  }
-  /* Page 3 */
-  .title3 h2{
-    padding: 19.5px 6.5px;
-    position: relative;
-    margin: -12px 0px 0px -8px;
-    font-size: 80%;
-  }
-  .header3 h1{
-    width: 106%;
-    padding: 10px 20px;
-    font-size: 1.25rem;
-  }
-  /* Page 4 */
-  .title4 h2{
-    padding: 19.5px 7px;
-    position: relative;
-    margin: -12px 0px 0px -8px;
-    font-size: 80%;
-  }
-  .header4 h1{
-    width: 106%;
-    padding: 10px 20px;
-    font-size: 1.25rem;
   }
   /* Page 5 */
   .title5 h2{
