--- a/style.css
+++ b/style.css
@@ -21,7 +21,9 @@ h1, h2, h3, h4, p {
 
 /* Navigation bar */
 .nav {
+  display: block;
   text-align: center;
+  margin: auto;
 }
 
 .nav span.step-num {
@@ -37,9 +39,10 @@ h1, h2, h3, h4, p {
   display: inline-block;
   position: relative;
   left: -85px;
-  top: -25px;
+  top: -30px;
   font-family: 'Raleway', sans-serif;
   font-weight: normal; 
+  font-size: 1.2rem;
 }
 
 .nav li {
@@ -62,7 +65,7 @@ li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 8px;
+  padding: 14px 14.75px;
   text-decoration: none;
 }
 
@@ -84,7 +87,7 @@ li a:hover {
   background-color: lightgrey; 
   height: 20px;
   width: 667px;
-  margin: -45px auto;
+  margin: -54px auto;
 }
 
 .pfinished { 
@@ -159,8 +162,8 @@ li a:hover {
 .previouspage:hover{
   background-color: white;
   color: #7EC971;
+  padding: 3px 0.2em;
   border: 3px solid #7EC971;
-  padding: 0.15em 0.15em;
   transition: ease-in-out 80ms;
 }
 
@@ -188,7 +191,7 @@ li a:hover {
   background-color: white;
   color: #7EC971;
   border: 3px solid #7EC971;
-  padding: 0.15em 0.2em;
+  padding: 3px 0.2em;
   transition: ease-in-out 80ms;
 }
 
@@ -212,8 +215,8 @@ li a:hover {
 .faqlink:hover{
   background-color: white;
   color: #7EC971;
+  padding: 2.5px 0em;
   border: 3px solid #7EC971;
-  padding: 0.15em 0.2em;
   transition: ease-in-out 80ms;
 }
 
@@ -236,6 +239,7 @@ li a:hover {
 
 /* Title Page 1*/
 .title h2{
+  display: block;
   text-align: center;
   float: left;
   padding: 20.5px 20px;
@@ -332,7 +336,7 @@ h3 ul li{
 
 .dropbtn {
   display: block;
-  background-color: #7EC971;
+  background-color: #009CCC;
   color: white;
   padding: 16px;
   font-size: 20px;
@@ -374,7 +378,7 @@ h3 ul li{
   margin: auto;
   font-family: 'Raleway', sans-serif;
   font-weight: normal;
-  color: #15749E;
+  color: #009CCC;
 }
 
 .dropdown-content a:hover {
@@ -388,7 +392,10 @@ h3 ul li{
 }
 
 .dropdown:hover .dropbtn {
-  background-color: #3e8e41;
+  background-color: white;
+  color: #15749E;
+  border: 3px solid #15749E;
+  padding: 13px 14px;
 }
 
 .dropcheck {
@@ -429,7 +436,7 @@ h3 ul li{
 
 */
 
-/* Title Page 3 */
+/* Title Page 3
 .title3 h2{
   text-align: center;
   float: left;
@@ -438,9 +445,9 @@ h3 ul li{
   color: white;
   position: relative;
   margin: -12px 0px 0px -8px;
-}
+} */
 /*Header Page 3*/
-.header3 h1{
+/* .header3 h1{
   display: inline-block;
   text-align: center;
   background-color: #009CCC;
@@ -449,7 +456,7 @@ h3 ul li{
   margin: 0px 0px 0px -8px; 
   font-size: 1.5rem;
   padding: 15px 0px;
-}
+} */
 
 /* Page 4 - Contact Details
 
@@ -546,6 +553,7 @@ form p.p1{
   position: relative;
   margin: -12px 0px 0px -10px;
 }
+
 /*Header Page 5*/
 .header5 h1{
   display: inline-block;
@@ -556,6 +564,110 @@ form p.p1{
   margin: 0px 0px 0px -8px; 
   font-size: 1.5rem;
   padding: 15px 0px;
+}
+
+/*Header Num 2 Page 5*/
+.header6 h1{
+  display: inline-block;
+  text-align: center;
+  background-color: #15749E;
+  color: white;
+  width: 101.75%;
+  margin: 0px 0px 0px -8px; 
+  font-size: 1.5rem;
+  padding: 15px 0px;
+}
+
+/* Next Steps */
+
+.pcontainer {
+  display: block;
+  width: 58em;
+  margin: auto;
+}
+
+.pcontainer p{
+  display: inline-block;
+  text-align: left;
+  color: #15749E;
+  width: 101.75%;
+  margin: 0px 0px 0px -8px; 
+  font-size: 1.5rem;
+  padding: 15px 0px;
+}
+
+/* Contact Methods */
+
+.ccontainer {
+  display: block;
+  width: 15em;
+  margin: auto;
+}
+
+.ccontainer p{
+  display: inline-block;
+  text-align: center;
+  color: #15749E;
+  width: 101.75%;
+  margin: -10px 0px 0px -8px; 
+  font-size: 1.5rem;
+  padding: 15px 15px;
+}
+
+.ccontainer a p{
+  display: inline-block;
+  text-align: center;
+  color: #009CCC;
+  width: 101.75%;
+  margin: -10px 0px 0px -8px; 
+  font-size: 1.5rem;
+  padding: 15px 15px;
+}
+/* Phone number */
+
+.ccontainer a p:hover{
+  color: #7EC971;
+}
+
+/* Social Media Icons
+.ccontainer a:nth-last-child(2){
+  text-align: center;
+  width: 25%;
+  margin: 0px 0px 0px -8px; 
+  font-size: 1.5rem;
+  padding: 15px 15px;
+} */
+
+.ccontainer a{
+  display: block;
+  width: 15em;
+  margin: auto;
+}
+
+/* Style all font awesome icons */
+a.fa  {
+  display: inline-block;
+  font-size: 35px;
+  width: 55px;
+  text-align: center;
+  text-decoration: none;
+  /* text-align: center;
+  /* margin-left: 0px; */
+  padding: 10px 10px;
+  background-color: #009CCC;
+  color: white;
+  border-radius: 50%;
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+  background-color: white;
+  color: #15749E;
+  border: 3px solid #15749E;
+  padding: 7px 7px;
 }
 
 /* Media Queries */
@@ -572,13 +684,13 @@ form p.p1{
     font-weight: bold; 
   }
   .nav li{
-    padding: 0px 5.2px;
+    padding: 0px 2.1px;
   }
   li a:hover {
     background-color: white;
     color: #15749E;
     font-size: 1.1rem;
-    padding: 13px 8px;
+    padding: 14.5px 16.5px;
     transition: ease-in-out 80ms;
   }
   .pbcontainer {
@@ -675,7 +787,7 @@ form p.p1{
     margin-bottom: 1em;
   }
   /* Page 3 */
-  .title3 h2{
+  /* .title3 h2{
     padding: 19.5px 6.5px;
     position: relative;
     margin: -12px 0px 0px -8px;
@@ -685,7 +797,7 @@ form p.p1{
     width: 106%;
     padding: 10px 20px;
     font-size: 1.25rem;
-  }
+  } */
   /* Page 4 */
   .title4 h2{
     padding: 19.5px 7px;
@@ -748,5 +860,66 @@ form p.p1{
     width: 106%;
     padding: 10px 20px;
     font-size: 1.25rem;
+  }
+  .header6 h1{
+    width: 106%;
+    padding: 10px 20px;
+    font-size: 1.25rem;
+  }
+    /* Next Steps */
+  .pcontainer {
+    display: block;
+    width: 15em;
+    margin: auto;
+  }
+  .pcontainer p{
+    margin-top: 2px;
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+  /* Contact Methods */
+  .ccontainer {
+    display: block;
+    width: 15em;
+    margin: auto;
+  }
+  .ccontainer p{
+    display: inline-block;
+    text-align: center;
+    color: #15749E;
+    width: 101.75%;
+    margin: -10px 0px 0px -8px; 
+    font-size: 1.5rem;
+    padding: 15px 15px;
+  }
+  /* Social Media Icons */
+  .ccontainer a{
+    display: block;
+    width: 15em;
+    margin: auto;
+  }
+  /* Style all font awesome icons */
+  a.fa  {
+    display: inline-block;
+    font-size: 35px;
+    width: 55px;
+    text-align: center;
+    text-decoration: none;
+    /* text-align: center;
+    /* margin-left: 0px; */
+    padding: 10px 10px;
+    background-color: #15749E;
+    color: white;
+    border-radius: 50%;
+    margin-top: 10px;
+    margin-bottom: 40px;
+  }
+  /* Add a hover effect if you want */
+  .fa:hover {
+    opacity: 0.7;
+    background-color: white;
+    color: #15749E;
+    border: 3px solid #15749E;
+    padding: 7px 7px;
   }
 }
