--- a/style.css
+++ b/style.css
@@ -96,6 +96,8 @@ li a:hover {
   padding: 2px;
   text-align: center;
   font-size: 15px; 
+  font-family: 'Raleway', sans-serif;
+  font-weight: normal;
 }
 
 /*Logo*/
@@ -393,8 +395,8 @@ h3 ul li{
 
 .dropdown:hover .dropbtn {
   background-color: white;
-  color: #15749E;
-  border: 3px solid #15749E;
+  color: #009CCC;
+  border: 3px solid #009CCC;
   padding: 13px 14px;
 }
 
@@ -723,7 +725,7 @@ a.fa  {
     font-size: 60%;
   }
   .HomeImage img{
-    width: 107%;
+    width: 106%;
     margin: 0px 0px 0px -10px;
   }
   .header h1{
@@ -786,22 +788,9 @@ a.fa  {
   .rolelist h3 ul li:last-of-type {
     margin-bottom: 1em;
   }
-  /* Page 3 */
-  /* .title3 h2{
-    padding: 19.5px 6.5px;
-    position: relative;
-    margin: -12px 0px 0px -8px;
-    font-size: 80%;
-  }
-  .header3 h1{
-    width: 106%;
-    padding: 10px 20px;
-    font-size: 1.25rem;
-  } */
   /* Page 4 */
   .title4 h2{
     padding: 19.5px 7px;
-    position: relative;
     margin: -12px 0px 0px -8px;
     font-size: 80%;
   }
@@ -812,42 +801,10 @@ a.fa  {
   }
   /* Form Styling */
   input {
-    display: block;
     width: 100%;
-    margin: 1em auto 1em auto;
-    padding: 12px 20px;
-    border: 3px solid #009CCC;
-    border-radius: 20px;
-    box-sizing: border-box;
-    color: #15749E;
-    font-family: 'Raleway', sans-serif;
-    font-weight: bold;
   }
-  /* input:focus {
-    display: block;
-    width: 100%;
-    margin: 1em auto 1em auto;
-    padding: 12px 20px;
-    border: 3px solid #7EC971;
-    border-radius: 20px;
-    box-sizing: border-box;
-    color: #7EC971;
-    font-family: 'Raleway', sans-serif;
-    font-weight: bold;
-  } */
   input.submit {
-    background-color: #7EC971;
-    color: white;
-    border: 3px solid #7EC971;
-    padding: 10px;
     width: 6em;
-  }
-  form p.p1{
-    display: block;
-    text-align: center;
-    margin: auto;
-    margin-top: 20px;
-    color: #15749E;
   }
   /* Page 5 */
   .title5 h2{
@@ -868,58 +825,15 @@ a.fa  {
   }
     /* Next Steps */
   .pcontainer {
-    display: block;
     width: 15em;
-    margin: auto;
   }
   .pcontainer p{
-    margin-top: 2px;
     font-size: 1rem;
-    line-height: 1.5;
-  }
-  /* Contact Methods */
-  .ccontainer {
-    display: block;
-    width: 15em;
-    margin: auto;
-  }
-  .ccontainer p{
-    display: inline-block;
-    text-align: center;
-    color: #15749E;
-    width: 101.75%;
-    margin: -10px 0px 0px -8px; 
-    font-size: 1.5rem;
-    padding: 15px 15px;
-  }
-  /* Social Media Icons */
-  .ccontainer a{
-    display: block;
-    width: 15em;
-    margin: auto;
   }
   /* Style all font awesome icons */
   a.fa  {
     display: inline-block;
-    font-size: 35px;
     width: 55px;
-    text-align: center;
-    text-decoration: none;
-    /* text-align: center;
-    /* margin-left: 0px; */
-    padding: 10px 10px;
-    background-color: #15749E;
-    color: white;
-    border-radius: 50%;
-    margin-top: 10px;
-    margin-bottom: 40px;
-  }
-  /* Add a hover effect if you want */
-  .fa:hover {
-    opacity: 0.7;
-    background-color: white;
-    color: #15749E;
-    border: 3px solid #15749E;
-    padding: 7px 7px;
+    margin-bottom: 30px; 
   }
 }
