Progress bar margin was messed up, now fixed

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ li a:hover {
   background-color: lightgrey; 
   height: 20px;
   width: 667px;
-  margin: -54px auto;
+  margin: -3.4em auto;
 }
 
 .pfinished { 
