Changed some text, adjusted the margin of the dropdown menu to ensure usability on desktop

--- a/style.css
+++ b/style.css
@@ -104,9 +104,9 @@ li a:hover {
 .logo img{
   float: right;
   position: relative;
-  margin: -25px 0px 0px 0px;
+  margin: -10px 0px 0px 0px;
   width: 100px;
-  height: 25px;
+  height: 30px;
 }
 
 /* button styling referenced from: https://fdossena.com/?p=html5cool/buttons/i.frag */
@@ -125,7 +125,7 @@ li a:hover {
   font-weight: bold;
   font-size: 1.2rem;
   color:white;
-  background-color: rgb(103, 160, 93);
+  background-color: rgb(86, 133, 78);
   text-align: center;
 }
 
@@ -357,7 +357,6 @@ h3 ul li{
   display: block;
   width: 200px;
   margin: auto;
-  
 }
 
 .dropdown-content {
@@ -370,6 +369,7 @@ h3 ul li{
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   border-radius: 2em;
+  margin-top: -20px;
 }
 
 .dropdown-content a {
@@ -700,8 +700,8 @@ a.fa  {
   }
   .logo figure img{
     position: relative;
-    width: 20%;
-    height: 20%;
+    width: 50px;
+    height: 15px;
     margin: -3% -42px 0px 0px;
   }
   .buttonnavcontainer span.bnavtag{
