--- a/style.css
+++ b/style.css
@@ -72,9 +72,6 @@ li a {
 li a:hover {
   background-color: white;
   color: #15749E;
-  /* font-size: 1.1rem;
-  padding: 13px 14px;
-  transition: ease-in-out 80ms; */
 }
 
 .active {
@@ -175,8 +172,6 @@ li a:hover {
   position: relative;
   padding: 0.3em 0.5em;
   width: 110px;
-  /* margin: auto;
-  margin-top: 20px; */
   margin-left: 9em;
   border-radius: 2em;
   box-sizing: border-box;
@@ -222,17 +217,6 @@ li a:hover {
   transition: ease-in-out 80ms;
 }
 
-/* Footer */
-
-/* footer {
-  background-color: #15749E;
-  color: white;
-  text-align: center;
-  width: 100%;
-  padding: .5em;
-} */
-
-
 /* Page 1 - Introduction
 
 -------------------------------------------------
@@ -274,9 +258,11 @@ li a:hover {
 
 /* unordered list styling for Homepage*/
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
+
 /* referenced: https://stackoverflow.com/questions/4861224/how-to-use-css-to-surround-a-number-with-a-circle*/
+
 .numberCircle {
   display: block;
   border-radius: 50%;
@@ -334,6 +320,7 @@ h3 ul li{
 }
 
 /* Narrow Roles By: dropdown menu */
+
 /* Dropdown menu referenced from: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_js_dropdown_hover */
 
 .dropbtn {
@@ -432,41 +419,13 @@ h3 ul li{
   margin-bottom: 1em;
 }
 
-/* Page 3 - Training Signup
+/* Page 3 - Contact Details
 
 -------------------------------------------------
 
 */
 
-/* Title Page 3
-.title3 h2{
-  text-align: center;
-  float: left;
-  padding: 6px 43px;
-  background-color: #15749E;
-  color: white;
-  position: relative;
-  margin: -12px 0px 0px -8px;
-} */
-/*Header Page 3*/
-/* .header3 h1{
-  display: inline-block;
-  text-align: center;
-  background-color: #009CCC;
-  color: white;
-  width: 101.75%;
-  margin: 0px 0px 0px -8px; 
-  font-size: 1.5rem;
-  padding: 15px 0px;
-} */
-
-/* Page 4 - Contact Details
-
--------------------------------------------------
-
-*/
-
-/* Title Page 4 */
+/* Title Page 3 */
 .title4 h2{
   text-align: center;
   float: left;
@@ -476,7 +435,7 @@ h3 ul li{
   position: relative;
   margin: -12px 0px 0px -10px;
 }
-/*Header Page 4*/
+/*Header Page 3*/
 .header4 h1{
   display: inline-block;
   text-align: center;
@@ -501,19 +460,6 @@ input {
   font-family: 'Raleway', sans-serif;
   font-weight: bold;
 }
-
-/* input:focus {
-  display: block;
-  width: 50em;
-  margin: 1em auto 1em auto;
-  padding: 12px 20px;
-  border: 3px solid #7EC971;
-  border-radius: 20px;
-  box-sizing: border-box;
-  color: #7EC971;
-  font-family: 'Raleway', sans-serif;
-  font-weight: bold;
-} */
 
 input.submit {
   background-color: #7EC971;
@@ -625,20 +571,14 @@ form p.p1{
   font-size: 1.5rem;
   padding: 15px 15px;
 }
+
 /* Phone number */
 
 .ccontainer a p:hover{
   color: #7EC971;
 }
 
-/* Social Media Icons
-.ccontainer a:nth-last-child(2){
-  text-align: center;
-  width: 25%;
-  margin: 0px 0px 0px -8px; 
-  font-size: 1.5rem;
-  padding: 15px 15px;
-} */
+/* Social Media Icons */
 
 .ccontainer a{
   display: block;
@@ -647,14 +587,13 @@ form p.p1{
 }
 
 /* Style all font awesome icons */
+
 a.fa  {
   display: inline-block;
   font-size: 35px;
   width: 55px;
   text-align: center;
   text-decoration: none;
-  /* text-align: center;
-  /* margin-left: 0px; */
   padding: 10px 10px;
   background-color: #009CCC;
   color: white;
@@ -663,7 +602,8 @@ a.fa  {
   margin-bottom: 40px;
 }
 
-/* Add a hover effect if you want */
+/* Add a hover effect */
+
 .fa:hover {
   opacity: 0.7;
   background-color: white;
@@ -754,7 +694,6 @@ a.fa  {
     padding: 10px 20px;
     font-size: 1.25rem;
   }
-  /* Narrow Roles By: dropdown menu */
   .dropbtn {
     width: 150px;
   }
@@ -770,7 +709,6 @@ a.fa  {
   .dropcheck {
     margin: -1em 0 0 3.75em;
   }
-  /* List of Roles */
   .rolelist {
     width: 5em;
     margin-left: 70%;
@@ -788,7 +726,7 @@ a.fa  {
   .rolelist h3 ul li:last-of-type {
     margin-bottom: 1em;
   }
-  /* Page 4 */
+  /* Page 3 */
   .title4 h2{
     padding: 19.5px 7px;
     margin: -12px 0px 0px -8px;
@@ -799,14 +737,13 @@ a.fa  {
     padding: 10px 20px;
     font-size: 1.25rem;
   }
-  /* Form Styling */
   input {
     width: 100%;
   }
   input.submit {
     width: 6em;
   }
-  /* Page 5 */
+  /* Page 4 */
   .title5 h2{
     padding: 16px 13.5px;
     position: relative;
@@ -823,14 +760,12 @@ a.fa  {
     padding: 10px 20px;
     font-size: 1.25rem;
   }
-    /* Next Steps */
   .pcontainer {
     width: 15em;
   }
   .pcontainer p{
     font-size: 1rem;
   }
-  /* Style all font awesome icons */
   a.fa  {
     display: inline-block;
     width: 55px;
