--- a/style.css
+++ b/style.css
@@ -540,7 +540,7 @@ form p.p1{
   color: #15749E;
   width: 101.75%;
   margin: 0px 0px 0px -8px; 
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   padding: 15px 0px;
 }
 
@@ -764,7 +764,8 @@ a.fa  {
     width: 15em;
   }
   .pcontainer p{
-    font-size: 1rem;
+    font-size: 1.2rem;
+    line-height: 1.5;
   }
   a.fa  {
     display: inline-block;
